@@ -16,7 +16,7 @@
                             <span class="icon-plus"></span> Ajouter une page
                         </a>
                     </p>
-                    <div id="list_child_p"></div>
+                    <div id="list_child"></div>
                 </div>
             </div>
         </div>
